kubernetes/apps/home/snapcast/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: snapcast
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: snapcast
      app.kubernetes.io/name: snapcast
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: music-assistant
              app.kubernetes.io/name: music-assistant
      ports:
        - port: 1705
          protocol: TCP
    - from:
        - ipBlock:
            cidr: 10.10.1.0/24
        - ipBlock:
            cidr: 10.20.0.0/24
      ports:
        - port: 1704
          protocol: TCP
        - port: 1705
          protocol: TCP
        - port: 4953
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: envoy-internal
      ports:
        - port: 1780
          protocol: TCP
